# speakly

./: CLAUDE.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-app-shell/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-settings-onboarding/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-RESEARCH.md
.planning/phases/03-recording-core/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md
.planning/phases/04-cloud-stt-text-injection-mvp/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  (+5 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  tray.rs
src-tauri/src/ai/: mod.rs
src-tauri/src/inject/: mod.rs
src-tauri/src/recording/: capture.rs  mod.rs  vad.rs  wav_encoder.rs
src-tauri/src/stt/: download.rs  local.rs  mod.rs
src/components/: AudioLevelBars.tsx  SettingsPage.tsx  TrayPopup.tsx
src/hooks/: useSettings.ts
(+28 files in other folders)
