[package]
name = "speakly"
version = "0.1.0"
description = "Speakly — Cross-Platform Voice-to-Text Desktop App"
authors = ["Philipp"]
edition = "2021"

# Weitere Schluessel und ihre Definitionen: https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# Das _lib-Suffix vermeidet Konflikte mit dem Binary-Namen (Windows-spezifisches Problem)
# Siehe: https://github.com/rust-lang/cargo/issues/8519
name = "speakly_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
futures-util = "0.3"
whisper-rs = "0.14"
cpal = "0.16"
hound = "3.5"
rubato = "0.15"
tokio = { version = "1", features = ["rt-multi-thread"] }
enigo = "0.6"
tauri-plugin-clipboard-manager = "2"

[target.'cfg(target_os = "macos")'.dependencies]
tauri-plugin-macos-permissions = "2"
